--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>Document</title><link rel="stylesheet" type="text/css" href="css/main.css"></head><body><img src="i/guitar.png" id="guitar" alt="" class="guitar-image-e"><canvas id="myCanvas" class="canvas-e"></canvas><div class="twitter-icon-b"><div class="hover-circle-be"><a href="http://twitter.com/mailtolego" target="_blank" class="twitter-icon-text-be">@mailtolego</a></div><div class="twitter-mask-be"></div><div class="circle1-be"></div><div class="circle2-be"></div><div class="circle3-be"></div></div><div class="font-holder-e">&nbsp;</div><script type="text/javascript" src="js/lib/jquery-2.0.1.js"></script><script type="text/javascript" src="js/tween.min.js"></script><script type="text/javascript" src="js/paper.js"></script><script type="text/javascript" src="js/data.js"></script><script type="text/javascript" src="js/dat.gui.min.js"></script><script type="text/paperscript" src="js/main.js" canvas="myCanvas"></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+  </head>
+  <body><img src="i/guitar.png" id="guitar" alt="" class="guitar-image-e">
+    <canvas id="myCanvas" class="canvas-e"></canvas>
+    <div class="twitter-icon-b">
+      <div class="hover-circle-be"><a href="http://twitter.com/mailtolego" target="_blank" class="twitter-icon-text-be">@mailtolego</a></div>
+      <div class="twitter-mask-be"></div>
+      <div class="circle1-be"></div>
+      <div class="circle2-be"></div>
+      <div class="circle3-be"></div>
+    </div>
+    <div class="font-holder-e">&nbsp;</div>
+    <div class="my-gui-container"></div>
+    <script type="text/javascript" src="js/lib/jquery-2.0.1.js"></script>
+    <script type="text/javascript" src="js/tween.min.js"></script>
+    <script type="text/javascript" src="js/paper.js"></script>
+    <script type="text/javascript" src="js/data.js"></script>
+    <script type="text/javascript" src="js/dat.gui.min.js"></script>
+    <script type="text/javascript" src="js/jq-events.js"></script>
+    <script type="text/paperscript" src="js/main.js" canvas="myCanvas"></script>
+  </body>
+</html>
